Added biometric auth!

--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.0",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.14.1",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
