Implemented the bssic notification feature!

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,9 @@ buildscript {
         classpath("com.android.tools.build:gradle:8.7.0") // must specify version
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath("com.android.tools.build:gradle:8.1.1") // or 8.11.0
+        classpath("com.google.gms:google-services:4.3.15")
+
     }
 }
 
