--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
   "dependencies": {
     "@react-native-aria/overlays": "^0.3.15",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/messaging": "^23.3.1",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "native-base": "^3.4.28",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.0",
     "react-native-biometrics": "^3.0.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.14.1",
+    "react-native-onesignal": "^5.2.13",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
     "socket.io-client": "^4.8.1",
     "yup": "^1.7.0"
   },
@@ -46,7 +49,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
   "engines": {
