--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.0",
     "react-native-biometrics": "^3.0.1",
+    "react-native-config": "^1.5.9",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onesignal": "^5.2.13",
