--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goldrate",
+  "name": "सोने भाव (Sone Bhav)",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,9 +12,12 @@
   "dependencies": {
     "@react-native-aria/overlays": "^0.3.15",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-firebase/app": "^23.3.1",
-    "@react-native-firebase/messaging": "^23.3.1",
+    "@react-native-firebase/app": "^23.4.1",
+    "@react-native-firebase/auth": "^23.4.1",
+    "@react-native-firebase/firestore": "^23.4.1",
+    "@react-native-firebase/messaging": "^23.4.1",
     "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
@@ -29,7 +32,7 @@
     "react-native-onesignal": "^5.2.13",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "^15.14.0",
     "socket.io-client": "^4.8.1",
     "yup": "^1.7.0"
   },
