--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,13 +77,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.goldrate"
+    namespace "com.goldrate.app"
     defaultConfig {
-        applicationId "com.goldrate"
+        applicationId "com.goldrate.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 7
-        versionName "1.7"
+        versionCode 9
+        versionName "1.9"
     }
     signingConfigs {
         release {
