Solved Android Issue

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -48,5 +48,6 @@ MYAPP_UPLOAD_STORE_FILE=my-release-key.jks
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
 MYAPP_UPLOAD_STORE_PASSWORD=admin11
 MYAPP_UPLOAD_KEY_PASSWORD=admin11
+android.ndkVersion=27.1.12297006
 
 
