Working on adding version control

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,12 +13,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:8.7.0") // must specify version
+        classpath("com.android.tools.build:gradle:8.7.0")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
-        classpath("com.android.tools.build:gradle:8.1.1") // or 8.11.0
-        classpath("com.google.gms:google-services:4.3.15")
-
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
