--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@codeimplants/version-control": "^1.0.1",
     "@react-native-aria/overlays": "^0.3.15",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^23.4.1",
