--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,28 +3,28 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyDAwMX-VWjFcdPg1wR8IfJaqAPlRniwPAg</string>
+	<string>AIzaSyBlM13L3EcpKwr0AmcACwhIOPV0O4RaexQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>658697497871</string>
+	<string>260146781432</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.goldrate</string>
+	<string>com.codeimplants.sonebhav</string>
 	<key>PROJECT_ID</key>
-	<string>goldrate-app</string>
+	<string>sone-bhav</string>
 	<key>STORAGE_BUCKET</key>
-	<string>goldrate-app.firebasestorage.app</string>
+	<string>sone-bhav.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:658697497871:ios:4eab45ab9ce1f1740ae27a</string>
+	<string>1:260146781432:ios:050f571faf6f8a2d3c6f0d</string>
 </dict>
 </plist>
